tests/integration/snapshots/integration__common__valid_integer.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
298
stdout --- 
298
stderr --- 
<empty>
