tests/integration/snapshots/integration__common__valid_negative_fraction.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
-98.123456789
stdout --- 
-98.123456789
stderr --- 
<empty>
